womtool/src/test/resources/validate/wdl_draft3/invalid/subwf_sub_inputs_not_passed/subw_sub_inputs_not_passed.wdl
version 1.0

import "import_me.wdl"

workflow main {
  # Shouldn't (strictly) be able to call this sub-workflow because the inputs are not passed through
  call import_me.sub_wf
}
